--- a/SistemaInscrip/Shared/NavMenu.razor
+++ b/SistemaInscrip/Shared/NavMenu.razor
@@ -13,15 +13,26 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="Estudiante">
+                <span class="oi oi-plus" aria-hidden="true"></span> Resgistro Estudiante
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="Asingnatura">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Registro Asignatura
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Pago">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Registro Pago
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Inscripcion">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Registro Inscripcion
+            </NavLink>
+        </li>
+        
     </ul>
 </div>
 
