--- a/SistemaInscrip/Pages/Cinscripcion.razor
+++ b/SistemaInscrip/Pages/Cinscripcion.razor
@@ -1,6 +1,54 @@
 ﻿@page "/ConInscripcion"
-<h3>Component1</h3>
+@using SistemaInscrip.Controllers
+@using SistemaInscrip.Models
+<h3>Consulta Inscripciones</h3>
+
+<table class="table">
+    <thead>
+
+        <tr>
+
+            <th>Id</th>
+            <th>Semestre</th>
+            <th>Limite</th>
+            <th>tomado</th>
+            <th>Disponible</th>
+            <th>Fecha</th>
+            <th>Balance</th>
+            <th>Estdianteid</th>
+            <th>Monto</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach(var item in lista)
+        {
+        <tr>
+            <th>@item.InscripcionId</th>
+            <th>@item.Semestre</th>
+            <th>@item.Limite</th>
+            <th>@item.Tomado</th>
+            <th>@item.Disponible</th>
+            <th>@item.Fecha</th>
+            <th>@item.Balance</th>
+            <th>@item.EstudianteId</th>
+            <th>@item.Monto</th>
+        </tr>
+        }
+    </tbody>
+
+</table>
+
+
 
 @code {
+
+    public List<Inscripciones> lista;
+    protected override void OnInitialized()
+    {
+
+        InscripcionControllers inscripcionControllers = new InscripcionControllers();
+
+        lista = inscripcionControllers.GetInscripcions(e => true);
+    }
 
 }
