--- a/SistemaInscrip/Shared/NavMenu.razor
+++ b/SistemaInscrip/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Asingnatura">
+            <NavLink class="nav-link" href="Asignatura">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Registro Asignatura
             </NavLink>
         </li>
@@ -32,7 +32,26 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Registro Inscripcion
             </NavLink>
         </li>
-        
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ConInscripcion">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Inscripcion
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ConPago">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Pago
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ConEstudiante">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Estudiante
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ConAsignatura">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Asignatura
+            </NavLink>
+        </li>
     </ul>
 </div>
 
