--- a/SistemaInscrip/Pages/Casignatura.razor
+++ b/SistemaInscrip/Pages/Casignatura.razor
@@ -22,6 +22,7 @@
                 <th>@item.Descripcion</th>
                 <th>@item.Prerequisito</th>
                 <th>@item.Creditos</th>
+                <td><a class=" btn btn-dark" href="asignatura/@item.AsignaturaId"> Ver</a></td>
                    
             </tr>
         }
@@ -31,6 +32,7 @@
 @code {
 
     public List<Asignaturas> lista;
+    List<Asignaturas> asignaturas = new List<Asignaturas>();
     protected override void OnInitialized()
     {
         AsignaturaControllers asignaturaControllers = new AsignaturaControllers();
