--- a/SistemaInscrip/Pages/Cinscripcion.razor
+++ b/SistemaInscrip/Pages/Cinscripcion.razor
@@ -32,6 +32,7 @@
             <th>@item.Balance</th>
             <th>@item.EstudianteId</th>
             <th>@item.Monto</th>
+            <td><a class=" btn btn-dark" href="asignatura/@item.InscripcionId"> Ver</a></td>
         </tr>
         }
     </tbody>
