--- a/SistemaInscrip/Shared/NavMenu.razor
+++ b/SistemaInscrip/Shared/NavMenu.razor
@@ -18,7 +18,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Asignatura">
+            <NavLink class="nav-link" href="Asignatura/0">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Registro Asignatura
             </NavLink>
         </li>
